[DD-258] Fix z-index of filter and search bar
Filter and search bar displayed when opening login modal window

--- a/frontend/src/components/Map/Map.module.scss
+++ b/frontend/src/components/Map/Map.module.scss
@@ -174,7 +174,7 @@
     border-bottom: 3px solid $blue-second;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    z-index: 500 !important;
+    z-index: 2 !important;
 
     .sidebar-title {
         display: flex;
